workshop04try/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations: 
    nginx.ingress.kubernetes.io/limit-rps: “5“ 
    nginx.ingress.kubernetes.io/limit-rpm: “300“
spec:
  ingressClassName: nginx
  rules:
  - host: workshop04-104.248.98.16.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-svc
            port:
              number: 80
