workshop04try/wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-deployment-network-policy
  labels:
    app: wordpress
spec:
  podSelector:
    matchLabels:
      app: wordpress
      tier: frontend
  policyTypes:
    - Egress
    - Ingress
  egress: 
    - {}
  ingress: 
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
  # egress:
  #   - to:
  #     - podSelector:
  #         matchLabels:
  #           app: wordpress
  #           tier: mysql
  #           controller-revision-hash: wordpress-mysql-85bf648c49
  #           statefulset.kubernetes.io/pod-name: wordpress-mysql-0
  #     ports:
  #       - port: 3306
  #         protocol: TCP
